# -- NEEDED FOR: Python 2.7
# REQUIRES: setuptools == 44.1.1
# SEE: https://setuptools.pypa.io/en/latest/userguide/declarative_config.html

[metadata]
name = behave
version = 1.3.3
# DISABLED: version = attr: behave.version.VERSION
author = Jens Engel, Benno Rice, Richard Jones
author_email = Jens Engel <jenisys@noreply.github.com>
maintainer = Jens Engel, Peter Bittner
maintainer_email =
    Jens Engel <jenisys@noreply.github.com>
    Peter Bittner <bittner@noreply.github.com>
description = behave is behaviour-driven development, Python style
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    BDD, behavior-driven-development, bdd-framework,
    behave, gherkin, cucumber-like
license = BSD-2-Clause
license_files = LICENSE
# DISABLED: url = https://github.com/behave/behave
# DISABLED: download_url = https://pypi.org/project/behave
project_urls =
    Homepage  = https://github.com/behave/behave
    Documentation = https://behave.readthedocs.io/en/latest/
    Repository = https://github.com/behave/behave
    Issues = https://github.com/behave/behave/issues/
    Changelog = https://github.com/behave/behave/blob/main/CHANGES.rst

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: Jython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
provides = behave
platforms = any

[bdist_wheel]
universal = true

[options]
include_package_data = true
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*
# DISABLED: python_requires: >=3.6
install_requires =
    cucumber-tag-expressions >= 4.1.0
    cucumber-expressions >= 17.1.0; python_version >= '3.8'
    enum34; python_version < '3.4'
    parse >= 1.18.0
    parse-type >= 0.6.0
    six >= 1.15.0
    win_unicode_console; python_version <= '3.9'
    colorama >= 0.3.7
    tomli>=1.1.0; python_version >=  '3.0' and python_version < '3.11'
    toml>=0.10.2; python_version <  '3.0'

    # -- PYTHON2 BACKPORTS:
    contextlib2;  python_version < '3.5'
    pathlib; python_version < '3.4'
    pathlib2 >= 2.3.6; python_version < '3.6'
    scandir >= 1.10.0; python_version < '3.5'
    traceback2; python_version < '3.0'

tests_requires =
    pytest <  5.0; python_version <  '3.0' # >= 4.2
    pytest >= 5.0; python_version >= '3.0'
    pytest-html >= 1.19.0,<2.0; python_version <  '3.0'
    pytest-html >= 2.0;         python_version >= '3.0'
    mock  <  4.0;   python_version <  '3.6'
    mock  >= 4.0;   python_version >= '3.6'
    PyHamcrest >= 2.0.2; python_version >= '3.0'
    PyHamcrest <  2.0;   python_version <  '3.0'
    assertpy >= 1.1
    chardet
    # -- PREAPRED: charset-normalizer

    # -- HINT: path.py => path (python-install-package was renamed for python3)
    path >= 13.1.0;         python_version >= '3.5'
    path.py >=11.5.0,<13.0; python_version <  '3.5'

    # -- EXTRA PYTHON PACKAGES: Used for some tests
    freezegun >= 1.5.1; python_version > '3.7'
# DISABLED: zip_safe = true

[options.packages.find]
where = .
include = behave*
exclude =
    behave4cmd0*
    tasks*
    tests*

[options.entry_points]
console_scripts =
    behave = behave.__main__:main


[options.extras_require]
develop =
    build >= 0.5.1
    twine >= 1.13.0
    coverage >= 5.0
    pytest >=4.2,<5.0; python_version <  '3.0'
    pytest >= 5.0; python_version >= '3.0'
    pytest-html >= 1.19.0,<2.0; python_version <  '3.0'
    pytest-html >= 2.0;         python_version >= '3.0'
    mock  <  4.0;   python_version <  '3.6'
    mock  >= 4.0;   python_version >= '3.6'
    PyHamcrest >= 2.0.2; python_version >= '3.0'
    PyHamcrest <  2.0;   python_version <  '3.0'
    pytest-cov
    tox   >= 3.28.0,<4.0   # -- HINT: tox >= 4.0 has breaking changes.
    virtualenv >= 20.26.6; python_version >= '3.7'
    virtualenv <  20.22.0; python_version <  '3.7'  # -- SUPPORT FOR: Python 2.7, Python <= 3.6
    invoke >=1.7.0,<2.0; python_version <  '3.6'
    invoke >=1.7.0;      python_version >= '3.6'
    # -- HINT, was RENAMED: path.py => path (for python3)
    path    >= 13.1.0; python_version >= '3.5'
    path.py >= 11.5.0; python_version <  '3.5'
    pycmd
    modernize >= 0.5
    pylint
    ruff; python_version >=  '3.7'
docs =
    sphinx >= 7.4.0;   python_version >= '3.7'
    sphinx >=1.6,<4.4; python_version < '3.7'
    furo >= 2024.04.27; python_version >= '3.8'
    # -- CONSTRAINTS UNTIL: sphinx > 5.0 is usable -- 2024-01
    # PROBLEM: sphinxcontrib-applehelp v1.0.8 requires sphinx > 5.0
    # SEE: https://stackoverflow.com/questions/77848565/sphinxcontrib-applehelp-breaking-sphinx-builds-with-sphinx-version-less-than-5-0
    sphinxcontrib-applehelp >= 1.0.8; python_version >= '3.7'
    sphinxcontrib-htmlhelp >= 2.0.5;  python_version >= '3.7'
    # -- SPHINX-EXTENSIONS:
    sphinx-copybutton >= 0.5.2; python_version >= '3.7'
formatters =
    behave-html-formatter >= 0.9.10; python_version >= '3.6'
    behave-html-pretty-formatter >= 1.9.1; python_version >= '3.6'
testing =
    pytest <  5.0; python_version <  '3.0' # >= 4.2
    pytest >= 5.0; python_version >= '3.0'
    pytest-html >= 1.19.0,<2.0; python_version <  '3.0'
    pytest-html >= 2.0;         python_version >= '3.0'
    mock  <  4.0;   python_version <  '3.6'
    mock  >= 4.0;   python_version >= '3.6'
    PyHamcrest >= 2.0.2; python_version >= '3.0'
    PyHamcrest <  2.0;   python_version <  '3.0'
    assertpy >= 1.1

    # -- HINT: path.py => path (python-install-package was renamed for python3)
    path >= 13.1.0;         python_version >= '3.5'
    path.py >=11.5.0,<13.0; python_version <  '3.5'

    # -- EXTRA PYTHON PACKAGES: Used for some tests
    freezegun >= 1.5.1; python_version > '3.7'
